--- a/bibtex/master_reference.bib
+++ b/bibtex/master_reference.bib
@@ -211,6 +211,24 @@
   organization={IEEE}
 }
 
+@inproceedings{casini2018partitioned,
+  title={Partitioned fixed-priority scheduling of parallel tasks without preemptions},
+  author={Casini, Daniel and Biondi, Alessandro and Nelissen, Geoffrey and Buttazzo, Giorgio},
+  booktitle={2018 IEEE Real-Time Systems Symposium (RTSS)},
+  pages={421--433},
+  year={2018},
+  organization={IEEE}
+}
+
+@inproceedings{fonseca2016response,
+  title={Response time analysis of sporadic {DAG} tasks under partitioned scheduling},
+  author={Fonseca, Jos{\'e} and Nelissen, Geoffrey and Nelis, Vincent and Pinho, Lu{\'\i}s Miguel},
+  booktitle={2016 11th IEEE Symposium on Industrial Embedded Systems (SIES)},
+  pages={1--10},
+  year={2016},
+  organization={IEEE}
+}
+
 @article{rahni2012feasibility,
   title={Feasibility analysis of real-time transactions},
   author={Rahni, Ahmed and Grolleau, Emmanuel and Richard, Micha{\"e}l and Richard, Pascal},
