--- a/paper/2019_ECRTS_Response-Time_Analysis_of_ROS2_Processing_Chains_Under_Reservation-Based_Scheduling/limitations_extensions_and_conclusions.tex
+++ b/paper/2019_ECRTS_Response-Time_Analysis_of_ROS2_Processing_Chains_Under_Reservation-Based_Scheduling/limitations_extensions_and_conclusions.tex
@@ -3,77 +3,71 @@
 \section{Limitations, Extensions, and Conclusions}
 \label{sec: limitations, extensions, and conclusions}
 
-\begin{frame}{}
+\begin{frame}{セクションサマリ}
+    \begin{itembox}[l]{\textbf{目的}}
+        本論文の制限について説明し, 将来の拡張の有望な方向性を強調する
+    \end{itembox}
+\end{frame}
+
+\begin{frame}{マルチスレッドエグゼキュータ}
     \begin{itemize}
-        \item ROS 2 処理チェーンのタイミング解析に関するこの最初の作業は, 既に実用的なコンポーネント (move\_base など) を処理することができ, 将来の開発のための豊富なプラットフォームを提供する
-\item それにもかかわらず, 成熟し, 柔軟で, 広く使用されているフレームワークに伴う避けられない複雑さを考えると, あまり使用されない ROS の側面を除外する必要がありました
-\item 以下では, これらの制限について説明し, 将来の拡張の有望な方向性を強調する
+        \item ROS は組み込みでマルチスレッドエグゼキュータを提供する
+        \item 共有プロセスで複数のエグゼキュータスレッドを使用すると, 同時実行性の問題が発生する
+        \item ROS はこの問題に対処するためにmutually exclusiveコールバックグループを導入し, 同じグループ内のコールバックが同時に実行されないことを保証する
+        \item コールバック間のブロッキング関係を処理するために分析を拡張することは, 今後の課題である
     \end{itemize}
 \end{frame}
 
-\begin{frame}{}
-    \begin{itemize}
-        \item 本論文では, 組み込みのシングルスレッド ROS エグゼキュータについて説明する
-\item ROS は, そのエグゼキュータのマルチスレッドバリアントも提供し, さらに, 任意の特殊目的のエグゼキュータを定義できる
-\item 特定のロボットのニーズに合わせて調整された専用のスケジューラを簡単に統合できるようになれば, 将来的に興味深いドメイン固有の研究が可能になる
-\item 共有プロセスで複数のエグゼキュータスレッドを使用すると, 同時実行性の問題が発生する
-\item ROS は, この問題に対処するためにmutually exclusiveコールバックグループを導入し, 同じグループ内のコールバックが同時に実行されないことを保証する
-\item コールバック間のブロッキング関係を処理するために分析を拡張することは, 今後の課題である
-    \end{itemize}
-\end{frame}
-
-\begin{frame}{}
+\begin{frame}{モード変更}
     \begin{itemize}
         \item 本論文では, コールバックのグラフが固定されていると仮定した
-\item しかし, ROS では, ノードが実行時に動的に参加および離脱したり, 動的にトピックにsubscribeおよびsubscribe解除したりできる
-\item これは, さまざまな動作モードを実装する場合に特に役立つ
-\item この問題は, 文献 [38, 45] ではモード変更と呼ばれている
-\item 本論文の分析は, 安定動作中の各モードに適用できるが, モード変更中の過渡的な影響は考慮されていない
-\item モードの変更を考慮した新しい分析手法の設計 ($[10,11,13]$ を ROS システムに拡張するなど) は, 別の関連する将来の方向性を表している
+        \item しかし, ROS ではモード変更が可能
+              \begin{block}{モード変更}
+                  ノードが実行時に動的に参加および離脱したり, 動的にトピックにsubscribeおよびsubscribe解除する
+              \end{block}
+              \vspace{5mm}
+        \item モード変更を考慮した新しい分析手法の設計は, 今後の拡張可能性
     \end{itemize}
 \end{frame}
 
-\begin{frame}{}
+\begin{frame}{伝搬レイテンシ}
     \begin{itemize}
-        \item ネットワークレイテンシのオーバヘッドと基礎となる DDS 実装を 1 つの変数 $\delta_{i, j}$ としてモデル化した
-\item これにより, ネットワークを通過するたびに通信レイテンシを合計することで, 全体的な応答時間におけるネットワーク関連のレイテンシを安全かつ簡単に計算できる
-\item 将来の改善の機会は, ネットワーク分析を統合して, ネットワークが複数回交差するときに, 1 回限りの支払いバーストの問題によって引き起こされる悲観論を排除することである
-\item さらに, 利用可能な DDS 実装の詳細な調査により, メッセージ処理のオーバヘッドをより正確にモデル化できるようになる
+        \item 本論文では, ネットワークレイテンシのオーバヘッドと基礎となる DDS 実装を 1 つの変数 $\delta_{i, j}$ としてモデル化した
+        \item 伝搬レイテンシに関する将来の改善として以下が考えられる
+              \begin{itemize}
+                  \item ネットワーク分析を統合して, ネットワークが複数回交差するときに, 1 回限りの支払いバーストの問題によって引き起こされる悲観論を排除する
+                  \item 利用可能な DDS 実装の詳細な調査により, メッセージ処理のオーバヘッドをより正確にモデル化する
+              \end{itemize}
     \end{itemize}
 \end{frame}
 
-\begin{frame}{}
+\begin{frame}{待機可能なコールバック}
     \begin{itemize}
         \item トピックとサービスに加えて, ROS は待機可能なコールバックタイプも提供する
-\item この型は, ROS 1 [1] で知られている長期実行アクションや高レベルアクションのような, より複雑な通信プリミティブを実装することを目的としている
-\item このメカニズムは最新のリリースでのみ導入されたため, 現時点でこのメカニズムの既知のユーザはいない
-\item これらの追加メソッドが ROS 2 で採用されたときに, これらの追加メソッドに分析を拡張する必要がある
+        \item 待機可能なコールバックタイプは, 長期実行アクションや高レベルアクションのような, より複雑な通信プリミティブを実装することを目的としている
+        \item このメカニズムは最新のリリースでのみ導入されたため, 現時点でこのメカニズムの既知のユーザはいない
+        \item これらの追加メソッドが ROS 2 で採用されたときに, これらの追加メソッドに分析を拡張する必要がある
     \end{itemize}
 \end{frame}
 
-\begin{frame}{}
+\begin{frame}{各コールバックのトリガ回数}
     \begin{itemize}
         \item 各コールバックは, 実行ごとに最大 1 回, 全ての後続のアクティベーションをトリガすると仮定した
-\item 将来の改善として, 提案された分析を拡張して, 事前定義された数のインスタンスを実行した後にのみコールバックが後続をトリガできるようにしたり, 1 回の実行で各後続の複数のインスタンスをトリガしたりしたいと考えている [23]
+        \item 将来の改善として, 提案された分析を拡張して, 事前定義された数のインスタンスを実行した後にのみコールバックが後続をトリガできるようにしたり, 1 回の実行で各後続の複数のインスタンスをトリガしたりしたいと考えている
     \end{itemize}
 \end{frame}
 
-\begin{frame}{}
+\begin{frame}{精度の改善}
     \begin{itemize}
-        \item CPAアプローチに基づく当社の分析により, 実際のシステムを簡単かつ効率的に分析し, 予約を個別に検討することで複雑さを制限できる
-\item 分析の精度は, チェーン内のアクティベーションイベント間の相関関係を考慮することでさらに改善できる
-\item これにより, 複数の予約にまたがるチェーンの「1 回限りの支払い」の問題も軽減される
-\item 将来の研究の可能な研究の方向性は, フォンセカらによって提示されたアプローチを拡張することにある
-\item [21] と Casini ら
-\item [14] (それぞれ, 並列タスクのプリエンプティブおよびノンプリエンプティブ固定優先度スケジューリングのコンテキストで), 複数の予約にまたがるチェーンが自己中断タスクによってモデル化されることに基づいて [16]
-\item このように, 到着バーストは予約ごとに 1 回だけ考慮することができるため, 同じ予約を複数回通過するチェーンの分析精度が向上する
+        \item 分析の精度は, チェーン内のアクティベーションイベント間の相関関係を考慮することでさらに改善できる
+        \item 今後の研究の方向性としては, Fonsecaら~\cite{fonseca2016response}とCasiniら~\cite{casini2018partitioned}のアプローチを拡張し, 複数の予約にまたがるチェーンを自己中断タスクによってモデル化することが考えられる
     \end{itemize}
 \end{frame}
 
-\begin{frame}{}
+\begin{frame}{まとめ}
     \begin{itemize}
-        \item 結論として, ソースコードとドキュメントのレビューに基づいて, ROS 2 システムの最初の包括的なスケジューリングモデルを提示した
-\item ROS フレームワークの特定のプロパティを考慮に入れて, 現実的なケーススタディに適用する処理チェーンの応答時間分析を導き出した
-\item 将来の拡張の機会は十分に残されているが, 本論文の貢献は, リアルタイムシステムの専門知識を持たない ROS ユーザがアプリケーションの一時的な安全性とレイテンシ特性を迅速かつ便利に判断できるようにする自動分析ツールへの第一歩を表している
+        \item ソースコードとドキュメントのレビューに基づいて, ROS 2 システムの最初の包括的なスケジューリングモデルを提示した
+        \item ROS フレームワークのプロパティを考慮に入れて, 現実的なケーススタディに適用する処理チェーンの応答時間分析を導出した
+        \item 将来の拡張の機会は十分に残されているが, 本論文の貢献は, リアルタイムシステムの専門知識を持たない ROS ユーザがアプリケーションの一時的な安全性とレイテンシ特性を迅速かつ便利に判断できるようにする自動分析ツールへの第一歩となる
     \end{itemize}
 \end{frame}
