finish response_time_analysis

--- a/bibtex/master_reference.bib
+++ b/bibtex/master_reference.bib
@@ -298,6 +298,13 @@
   organization={IEEE}
 }
 
+@misc{leboudec2001theory,
+  title={A theory of deterministic queuing systems for the Internet},
+  author={Leboudec, Jean-Yves and Thiran, Patrick and Calculus, Network},
+  year={2001},
+  publisher={LnCS}
+}
+
 @article{henia2005system,
   title={System level performance analysis--the {SymTA/S} approach},
   author={Henia, Rafik and Hamann, Arne and Jersak, Marek and Racu, Razvan and Richter, Kai and Ernst, Rolf},
