--- a/paper/2020_RTSS_Responce_Time_Analysis_and_Priority_Assignment_of_Processing_Chains_on_ROS2_Executors/introduction.tex
+++ b/paper/2020_RTSS_Responce_Time_Analysis_and_Priority_Assignment_of_Processing_Chains_on_ROS2_Executors/introduction.tex
@@ -50,7 +50,7 @@
     \begin{itemize}
         \item 本論文の最初の貢献は, ROS2 エグゼキュータ上でチェーンを処理するための新しい応答時間分析技術を開発することによって, [6] の上記の問題に対処することである
         \item 本論文の新しい分析手法は, ROS2 エグゼキュータのスケジューリング動作に関する深い洞察を調査することで, 分析精度を大幅に向上させます
-        \item ランダムに生成されたワークロードを使用した経験的評価では, 新しい応答時間の境界が, さまざまなパラメーター設定の下で大幅なマージンを持って [6] よりも一貫して優れていることが示されている
+        \item ランダムに生成されたワークロードを使用した経験的評価では, 新しい最悪応答時間が, さまざまなパラメーター設定の下で大幅なマージンを持って [6] よりも一貫して優れていることが示されている
     \end{itemize}
 \end{frame}
 
@@ -60,7 +60,7 @@
         \item 処理チェーンの応答時間は, この処理チェーンの最後のコールバックの優先度のみに依存することを自明にした
         \item 最後のコールバックに割り当てられた優先度が高いほど, 処理チェーンの応答時間が短くなる可能性がある
         \item このプロパティは, ROS2 アプリケーション開発者がシステムの応答性を改善するのに役立つ
-        \item これは, ハードリアルタイムシステムの応答時間の上界だけでなく, ソフトリアルタイムシステムと一般システムの実際の最悪のケースと平均応答時間も改善する
+        \item これは, ハードリアルタイムシステムの最悪応答時間だけでなく, ソフトリアルタイムシステムと一般システムの実際の最悪のケースと平均応答時間も改善する
         \item 余分な設計費もないランダムに生成されたワークロードを使用したシミュレーション実験と, 現実的なROS2 ベースのロボットソフトウェアシステムを使用したケーススタディの両方を使用して, 調査結果の使用法を示す
     \end{itemize}
 \end{frame}
