--- a/paper/2021_RTAS_PiCAS_New_Design_of_Priority_Driven_Chain_Aware_Scheduling_or_ROS2/evaluation.tex
+++ b/paper/2021_RTAS_PiCAS_New_Design_of_Priority_Driven_Chain_Aware_Scheduling_or_ROS2/evaluation.tex
@@ -259,7 +259,7 @@
 \begin{frame}{解析実行時間の比較 [結果考察]}
     \begin{itemize}
         \item どちらのアプローチでも利用率が上がると分析時間は長くなるが, ROS2-SD は ROS2-PiCAS よりもはるかに遅い
-        \forme{\item ROS2-SD 分析の探索空間は可能な限り長いビジー間隔であり, 分析は全ての応答時間が収束するグローバルな固定点を繰り返し探索する~\cite{casini2019response}}
+        \forme{\item ROS2-SD 分析の探索空間は可能な限り長いビジーウィンドウであり, 分析は全ての応答時間が収束するグローバルな固定点を繰り返し探索する~\cite{casini2019response}}
         \item 提案された分析は既存のアプローチよりもはるかに高速であり, 複雑なシステムへの適用やランタイム制御が可能
     \end{itemize}
 \end{frame}
