--- a/paper/2022_RTSS_Real-Time_Scheduling_and_Analysis_of_Processing_Chains_on_Multi-threaded_Executor_in_ROS2/experiments.tex
+++ b/paper/2022_RTSS_Real-Time_Scheduling_and_Analysis_of_Processing_Chains_on_Multi-threaded_Executor_in_ROS2/experiments.tex
@@ -170,7 +170,7 @@
 \begin{frame}{実験方法}
     \begin{itemize}
         \item 2スレッドのマルチスレッドエグゼキュータとシングルスレッドエグゼキュータでそれぞれ5分間実行し, 各チェーンの平均ケース応答時間（ACRT）と最悪ケース応答時間（WCRT）を測定する（これは安全境界ではない）
-        \item \hlink{theorem2}{Theorem 2} により各チェーンの応答時間境界を計算し, 観測された下限と比較する
+        \item \hlink{theorem2}{Theorem 2} により各チェーンの最悪応答時間を計算し, 観測された下限と比較する
     \end{itemize}
 \end{frame}
 
