finish system model

--- a/paper/2019_ECRTS_Response-Time_Analysis_of_ROS2_Processing_Chains_Under_Reservation-Based_Scheduling/case_study.tex
+++ b/paper/2019_ECRTS_Response-Time_Analysis_of_ROS2_Processing_Chains_Under_Reservation-Based_Scheduling/case_study.tex
@@ -53,7 +53,7 @@
         \item 最悪サンプリングレイテンシにより, 時間駆動型セットアップは, イベント駆動型セットアップよりも $80 \mathrm{~ms}$ サンプリング周期が高くなる
         \item この場合, イベント駆動セットアップが望ましいことは明らかで, システムは, 古い値に基づいて計画を開始するのではなく, センサーの結果が到着するまで待つことができる
         \item チェーン全体の分析を無効にすると, チェーンの自己干渉により, 予測される最悪応答時間が大幅に増加する
-        \item 分析では, 全てのコールバックが他の全てのコールバックによってブロックされると保守的に想定しているため, 実際の干渉は 4 倍過大評価される
+        \item 分析では, 全てのコールバックが他の全てのコールバックによってブロックされると保守的に想定するため, 実際の干渉は 4 倍過大評価される
     \end{itemize}
 \end{frame}
 
