--- a/paper/2019_ECRTS_Response-Time_Analysis_of_ROS2_Processing_Chains_Under_Reservation-Based_Scheduling/response_time_analysis_for_processing_chains.tex
+++ b/paper/2019_ECRTS_Response-Time_Analysis_of_ROS2_Processing_Chains_Under_Reservation-Based_Scheduling/response_time_analysis_for_processing_chains.tex
@@ -230,6 +230,6 @@
 \begin{frame}{チェーンのエンドツーエンドレイテンシを求める方法}
     \begin{itemize}
         \item セクション 5.2 では単一のコールバックの応答時間分析を提案し, セクション 5.4 はそれを単一の予約に割り当てられたサブチェーンに拡張した
-        \item セクション 5.1 で説明したように, どちらのアプローチでも, 到着曲線を伝搬し, 個々の最悪応答時間を合計することにより, 処理チェーンの安全なエンドツーエンドのレイテンシを計算できる
+        \item セクション 5.1 で説明したように, どちらのアプローチでも, 到着曲線を伝搬し, 個々の最悪応答時間を合計することにより, 処理チェーンの安全なエンドツーエンドレイテンシを計算できる
     \end{itemize}
 \end{frame}
