--- a/paper/2019_ECRTS_Response-Time_Analysis_of_ROS2_Processing_Chains_Under_Reservation-Based_Scheduling/main.tex
+++ b/paper/2019_ECRTS_Response-Time_Analysis_of_ROS2_Processing_Chains_Under_Reservation-Based_Scheduling/main.tex
@@ -36,11 +36,11 @@
 % \input{introduction.tex} % wait kobayu
 % \input{background.tex}
 % \input{ros_scheduling.tex} % wait kobayu
-\input{system_model.tex}
+% \input{system_model.tex}
 \input{response_time_analysis_for_processing_chains.tex}
-% \input{case_study.tex}
-% \input{related_work.tex}
-% \input{limitations_extensions_and_conclusions.tex}
+\input{case_study.tex}
+\input{related_work.tex}
+\input{limitations_extensions_and_conclusions.tex}
 
 \lastpage
 
