--- a/paper/2019_ECRTS_Response-Time_Analysis_of_ROS2_Processing_Chains_Under_Reservation-Based_Scheduling/system_model.tex
+++ b/paper/2019_ECRTS_Response-Time_Analysis_of_ROS2_Processing_Chains_Under_Reservation-Based_Scheduling/system_model.tex
@@ -68,7 +68,7 @@
 
 \begin{frame}{アクティベーションモデル}
     \begin{itemize}
-        \item 各ソースコールバック $c_{s}$ は, アクティベーション曲線 $\eta_{s}^{e}(\Delta)$ \cite{henia2005system, leboudec2001theory, thiele2000real}に関連付けられている
+        \item 各ソースコールバック $c_{s}$ は, 外部イベント到着曲線 $\eta_{s}^{e}(\Delta)$ \cite{henia2005system, leboudec2001theory, thiele2000real}に関連付けられている
         \item 本論文では一般性を失わず, $\Delta>0$ かつ $\eta_{s}^{e}(\Delta)>0$ を想定する
     \end{itemize}
 \end{frame}
