finish case study

--- a/paper/2019_ECRTS_Response-Time_Analysis_of_ROS2_Processing_Chains_Under_Reservation-Based_Scheduling/case_study.tex
+++ b/paper/2019_ECRTS_Response-Time_Analysis_of_ROS2_Processing_Chains_Under_Reservation-Based_Scheduling/case_study.tex
@@ -19,7 +19,13 @@
                   \item より予測不可能なコンポーネントをクリティカルパスから分離するだけでなく, ROS executor スケジューリングポリシーの影響を制限するため
               \end{itemize}
         \item ローカルプランナーが $12.5 \mathrm{~Hz}$ の固定センサレートと同期して実行され, グローバルプランナーが $1 \mathrm{~Hz}$ で実行されるように設定する
-        \item 比較のために, 元の時間駆動型バージョンと, 内部トピックを使用してアクティベーションの依存関係を明示的にモデル化するイベント駆動型の代替設計の 2 つのバリアントをモデル化した
+    \end{itemize}
+\end{frame}
+
+\begin{frame}{実験環境2}
+    \begin{itemize}
+        \item 比較のために, 元の時間駆動型バージョンと, 内部トピックを使用してアクティベーションの依存関係を明示的にモデル化するイベント駆動型の代替設計をモデル化した
+        \item イベント駆動型セットアップの場合, \hlink{ssec: analysis for processing chains}{サブチェーンの分析} を使用しない場合の分析も行う (図中の no chains)
     \end{itemize}
 \end{frame}
 
@@ -33,13 +39,6 @@
     \end{block}
 \end{frame}
 
-\begin{frame}{実験環境2}
-    \begin{itemize}
-        \item イベント駆動型セットアップの場合, セクション 5.4 で説明したチェーン全体の分析を無効にしたときの分析結果も含める
-        \item 簡単にするために, 残りのコアをグローバルプランナー予約に割り当てる
-              \notes{グローバルプランナーの予約を通じて処理チェーンを分析していないため, この予約専用の帯域幅の正確な量は, 応答時間に影響しない}
-    \end{itemize}
-\end{frame}
 
 \begin{frame}{[実験1] 結果}
     \fitimage{
@@ -47,19 +46,24 @@
     }{result1}
 \end{frame}
 
-\begin{frame}{[実験1] 結果の考察}
+\begin{frame}{[実験1] 結果の考察1}
     \begin{itemize}
-        \item 時間駆動型システムとイベント駆動型システムで, 予算の効果が似ている
+        \item 時間駆動型システムとイベント駆動型システムで, 同様の予算の効果が観察できる
         \item 最悪サンプリングレイテンシにより, 時間駆動型セットアップは, イベント駆動型セットアップよりも $80 \mathrm{~ms}$ サンプリング周期が高くなる
-        \item この場合, イベント駆動セットアップが望ましいことは明らかで, システムは, 古い値に基づいて計画を開始するのではなく, センサーの結果が到着するまで待つことができる
-        \item チェーン全体の分析を無効にすると, チェーンの自己干渉により, 予測される最悪応答時間が大幅に増加する
-        \item 分析では, 全てのコールバックが他の全てのコールバックによってブロックされると保守的に想定するため, 実際の干渉は 4 倍過大評価される
+        \item この場合, イベント駆動セットアップが明らかに望ましいと判断できる
+    \end{itemize}
+\end{frame}
+
+\begin{frame}{[実験1] 結果の考察2}
+    \begin{itemize}
+        \item no chains は, チェーンの自己干渉により, 予測される最悪応答時間が大幅に増加する
+        \item これは, 全てのコールバックが他の全てのコールバックによってブロックされると悲観的に想定するため
     \end{itemize}
 \end{frame}
 
 \begin{frame}{[実験2] 結果}
     \fitimage{
-        ローカルプランナーの予算を45\%として, 入力ジッターが増加したときの予測されるエンドツーエンドレイテンシ
+        ローカルプランナーの予算を45\%として, 入力ジッターが増加したときのエンドツーエンドレイテンシ
     }{result2}
 \end{frame}
 
