--- a/paper/2019_ECRTS_Response-Time_Analysis_of_ROS2_Processing_Chains_Under_Reservation-Based_Scheduling/limitations_extensions_and_conclusions.tex
+++ b/paper/2019_ECRTS_Response-Time_Analysis_of_ROS2_Processing_Chains_Under_Reservation-Based_Scheduling/limitations_extensions_and_conclusions.tex
@@ -30,10 +30,10 @@
     \end{itemize}
 \end{frame}
 
-\begin{frame}{伝搬レイテンシ}
+\begin{frame}{通信レイテンシ}
     \begin{itemize}
         \item 本論文では, ネットワークレイテンシのオーバヘッドと基礎となる DDS 実装を 1 つの変数 $\delta_{i, j}$ としてモデル化した
-        \item 伝搬レイテンシに関する将来の改善として以下が考えられる
+        \item 通信レイテンシに関する将来の改善として以下が考えられる
               \begin{itemize}
                   \item ネットワーク分析を統合して, ネットワークが複数回交差するときに, 1 回限りの支払いバーストの問題によって引き起こされる悲観論を排除する
                   \item 利用可能な DDS 実装の詳細な調査により, メッセージ処理のオーバヘッドをより正確にモデル化する
@@ -44,8 +44,7 @@
 \begin{frame}{待機可能なコールバック}
     \begin{itemize}
         \item トピックとサービスに加えて, ROS は待機可能なコールバックタイプも提供する
-        \item 待機可能なコールバックタイプは, 長期実行アクションや高レベルアクションのような, より複雑な通信プリミティブを実装することを目的としている
-        \item このメカニズムは最新のリリースでのみ導入されたため, 現時点でこのメカニズムの既知のユーザはいない
+        \item 待機可能なコールバックタイプは, 長期実行アクションや高レベルアクションのような, より複雑な通信を実装することを目的としている
         \item これらの追加メソッドが ROS 2 で採用されたときに, これらの追加メソッドに分析を拡張する必要がある
     \end{itemize}
 \end{frame}
@@ -53,7 +52,11 @@
 \begin{frame}{各コールバックのトリガ回数}
     \begin{itemize}
         \item 各コールバックは, 実行ごとに最大 1 回, 全ての後続のアクティベーションをトリガすると仮定した
-        \item 将来の改善として, 提案された分析を拡張して, 事前定義された数のインスタンスを実行した後にのみコールバックが後続をトリガできるようにしたり, 1 回の実行で各後続の複数のインスタンスをトリガしたりしたいと考えている
+        \item 将来の改善として, 以下が考えられる
+              \begin{itemize}
+                  \item  事前定義された数のインスタンスを実行した後にのみ, コールバックが後続をトリガできるようにする
+                  \item 1 回の実行で各後続の複数のインスタンスをトリガできるようにする
+              \end{itemize}
     \end{itemize}
 \end{frame}
 
