--- a/template.tex
+++ b/template.tex
@@ -25,7 +25,7 @@
 
 \maketitle
 
-% \summary
+% \summary{0}{0}
 % \input{abstract.tex}
 
 \begin{frame}{Outline}
@@ -33,6 +33,7 @@
     \scriptsize\tableofcontents[hideallsubsections]
 \end{frame}
 
+\input{prior_knowledge.tex}
 % \input{XXX.tex}
 
 \lastpage
